--- a/src/main/resources/static/basket.html
+++ b/src/main/resources/static/basket.html
@@ -467,16 +467,16 @@
     </div>
 
     <div class="d-flex align-items-center me-auto me-4">
-        <a class="navbar-brand" style="color: #6c757d; font-weight: bolder; font-size: 17px" href="store.html">ASOSIY</a>
-        <a class="navbar-brand" style="color: #6c757d; font-weight: bolder; font-size: 17px" href="contact.html">KONTAKT</a>
-        <a class="navbar-brand" style="color: #6c757d; font-weight: bolder; font-size: 17px" href="about.html">BIZ HAQIMIZDA</a>
+        <a class="navbar-brand" style="color: #6c757d; font-weight: bolder; font-size: 17px" href="store.html">HOME</a>
+        <a class="navbar-brand" style="color: #6c757d; font-weight: bolder; font-size: 17px" href="contact.html">CONTACT</a>
+        <a class="navbar-brand" style="color: #6c757d; font-weight: bolder; font-size: 17px" href="about.html">ABOUT US</a>
         <a class="navbar-brand admin-page" href="adminpage.html" style="display: none; font-weight: bolder; color: #6c757d; font-size: 17px;">Admin page</a>
     </div>
 
     <div class="d-flex align-items-center">
         <div class="cart-icons d-flex align-items-center">
-            <a href="#"><i class="bi bi-cart"></i><span style="color: #28a745">Savat</span><span class="cart-badge" id="cartSize"></span></a>
-            <a href="orders.html"><i class="bi bi-box-seam"></i><span>Buyurtmalar</span></a>
+            <a href="#"><i class="bi bi-cart"></i><span style="color: #28a745">Basket</span><span class="cart-badge" id="cartSize"></span></a>
+            <a href="orders.html"><i class="bi bi-box-seam"></i><span>Orders</span></a>
         </div>
 
         <!-- User Profile Dropdown -->
@@ -518,9 +518,9 @@
 <footer class="footer">
     <div class="containerjon">
         <div class="footer-section">
-            <h2>Bizning kompaniya</h2>
+            <h2>Our Company</h2>
             <div class="underline"></div>
-            <p>Ajoyib mahsulotlar va xizmatlar uchun yagona manzil. Biz bilan bog'laning va so'nggi takliflarimiz hamda maxsus chegirmalarimizdan xabardor bo'ling.</p>
+            <p>The one-stop destination for amazing products and services. Connect with us and stay updated on our latest offers and exclusive discounts.</p>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -530,20 +530,21 @@
         </div>
 
         <div class="footer-section">
-            <h2>Tezkor havolalar</h2>
+            <h2>Quick Links</h2>
             <div class="underline"></div>
             <ul>
-                <li><a href="store.html">Asosiy</a></li>
-                <li><a href="#">Kategoriyalar</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="store.html">Home</a></li>
+                <li><a href="#">Categories</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="inquiry.html">Inquiry</a></li>
             </ul>
         </div>
 
         <div class="footer-section">
-            <h2>Aloqada bo'ling</h2>
+            <h2>Stay Connected</h2>
             <div class="underline"></div>
-            <input type="email" placeholder="Telefon raqam kiriting..." class="email-input">
-            <button class="subscribe-btn">Obuna bo'lish</button>
+            <input type="email" placeholder="Enter your phone number..." class="email-input">
+            <button class="subscribe-btn">Subscribe</button>
         </div>
     </div>
 </footer>
