--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -282,19 +282,19 @@
     </div>
 
     <div class="d-flex align-items-center me-auto me-4"> <!-- ms-4 bilan chapga yaqinlashtiramiz -->
-        <a class="navbar-brand " style="color: #6c757d; font-weight: bolder; font-size: 17px" href="store.html">ASOSIY</a>
-        <a class="navbar-brand active" style="color: #6c757d; font-weight: bolder; font-size: 17px" href="contact.html">KONTAKT</a>
-        <a class="navbar-brand " style="color: #6c757d; font-weight: bolder; font-size: 17px" href="about.html">BIZ HAQIMIZDA</a>
+        <a class="navbar-brand " style="color: #6c757d; font-weight: bolder; font-size: 17px" href="store.html">HOME</a>
+        <a class="navbar-brand active" style="color: #6c757d; font-weight: bolder; font-size: 17px" href="contact.html">CONTACT</a>
+        <a class="navbar-brand " style="color: #6c757d; font-weight: bolder; font-size: 17px" href="about.html">ABOUT US</a>
         <a class="navbar-brand admin-page" href="adminpage.html"
            style="display: none; font-weight: bolder; color: #6c757d; font-size: 17px;">Admin page</a>
     </div>
     <div class="d-flex align-items-center">
         <div class="cart-icons d-flex align-items-center">
             <a href="#" onclick="toggleFavoritesPanel(); return false;"><i
-                    class="bi bi-heart"></i><span>Saralanganlar</span></a>
-            <a href="basket.html"><i class="bi bi-cart"></i><span>Savat</span><span class="cart-badge"
+                    class="bi bi-heart"></i><span>Liked</span></a>
+            <a href="basket.html"><i class="bi bi-cart"></i><span>Basket</span><span class="cart-badge"
                                                                                     id="cartSize">3</span></a>
-            <a href="orders.html"><i class="bi bi-box-seam"></i><span>Buyurtmalar</span></a>
+            <a href="orders.html"><i class="bi bi-box-seam"></i><span>Orders</span></a>
         </div>
 
 
@@ -323,15 +323,15 @@
     <div class="contact-container">
         <!-- Left Section -->
         <div class="left-section">
-            <h4>Biz bilan bog'laning</h4>
+            <h4>Contact Us</h4>
             <div class="contact-info">
                 <div class="contact-icon">
                     <i class="fas fa-phone"></i>
                 </div>
                 <div class="contact-text">
-                    <p>Bizga qo'ng'iroq qiling !</p>
-                    <p>24/7 aloqamiz</p>
-                    <p>Telefon raqam: <span>+998300000000</span></p>
+                    <p>Call us!</p>
+                    <p>Available 24/7</p>
+                    <p>Phone Number: <span>+998300000000</span></p>
                 </div>
             </div>
             <div class="contact-info">
@@ -339,27 +339,27 @@
                     <i class="fas fa-envelope"></i>
                 </div>
                 <div class="contact-text">
-                    <p>Bizga murojaat qiling !</p>
-                    <p>Ro'yxatni to'ldiring, biz siz bilan 24 soat ichida bog'lanamiz.</p>
+                    <p>Reach out to us!</p>
+                    <p>Fill out the form, and we will contact you within 24 hours.</p>
                 </div>
             </div>
         </div>
 
         <!-- Right Section -->
         <div class="right-section">
-            <h4 class="fw-bold mb-4">Bizga xabar yuboring !</h4>
+            <h4 class="fw-bold mb-4">Send Us a Message!</h4>
             <form>
                 <div class="row g-3">
                     <div class="col-md-6">
                         <div class="input-group">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
-                            <input type="text" class="form-control" placeholder="To'liq ism sharifingiz...">
+                            <input type="text" class="form-control" placeholder="Your full name...">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="input-group">
                             <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                            <input type="email" class="form-control" placeholder="Elektron pochta manzilingiz">
+                            <input type="email" class="form-control" placeholder="Your email address">
                         </div>
                     </div>
                 </div>
@@ -372,23 +372,23 @@
                 <div class="mt-3">
                     <div class="input-group">
                         <span class="input-group-text"><i class="fas fa-comment"></i></span>
-                        <textarea class="form-control" rows="4" placeholder="Xabaringizni qoldiring..."></textarea>
+                        <textarea class="form-control" rows="4" placeholder="Leave your message..."></textarea>
                     </div>
                 </div>
                 <div class="mt-4">
-                    <button type="submit" class="btn send-btn w-100">Xabarni yuborish</button>
+                    <button type="submit" class="btn send-btn w-100">Send Message</button>
                 </div>
             </form>
         </div>
     </div>
 </div>
+
 <footer class="footer">
     <div class="containerjon">
         <div class="footer-section">
-            <h2>Bizning kompaniya</h2>
+            <h2>Our Company</h2>
             <div class="underline"></div>
-            <p>Ajoyib mahsulotlar va xizmatlar uchun yagona manzil. Biz bilan bog‘laning va so‘nggi takliflarimiz hamda
-                maxsus chegirmalarimizdan xabardor bo‘ling.</p>
+            <p>The one-stop destination for amazing products and services. Connect with us and stay updated on our latest offers and exclusive discounts.</p>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -398,20 +398,21 @@
         </div>
 
         <div class="footer-section">
-            <h2>Tezkor havolalar</h2>
+            <h2>Quick Links</h2>
             <div class="underline"></div>
             <ul>
-                <li><a href="store.html">Asosiy</a></li>
-                <li><a href="#">Kategoriyalar</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="store.html">Home</a></li>
+                <li><a href="#">Categories</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="inquiry.html">Inquiry</a></li>
             </ul>
         </div>
 
         <div class="footer-section">
-            <h2>Aloqada bo'ling</h2>
+            <h2>Stay Connected</h2>
             <div class="underline"></div>
-            <input type="email" placeholder="Telefon raqam kiriting..." class="email-input">
-            <button class="subscribe-btn">Obuna bo'lish</button>
+            <input type="email" placeholder="Enter your phone number..." class="email-input">
+            <button class="subscribe-btn">Subscribe</button>
         </div>
     </div>
 </footer>
