--- a/src/main/resources/static/orders.html
+++ b/src/main/resources/static/orders.html
@@ -223,9 +223,9 @@
     </div>
 
     <div class="d-flex align-items-center me-auto me-4">
-        <a class="navbar-brand " style="color: #6c757d; font-weight: bolder; font-size: 17px" href="store.html">ASOSIY</a>
-        <a class="navbar-brand " style="color: #6c757d; font-weight: bolder; font-size: 17px" href="contact.html">KONTAKT</a>
-        <a class="navbar-brand " style="color: #6c757d; font-weight: bolder; font-size: 17px" href="about.html">BIZ HAQIMIZDA</a>
+        <a class="navbar-brand " style="color: #6c757d; font-weight: bolder; font-size: 17px" href="store.html">HOME</a>
+        <a class="navbar-brand " style="color: #6c757d; font-weight: bolder; font-size: 17px" href="contact.html">CONTACT</a>
+        <a class="navbar-brand " style="color: #6c757d; font-weight: bolder; font-size: 17px" href="about.html">ABOUT US</a>
         <a class="navbar-brand admin-page" href="adminpage.html"
            style="display: none; font-weight: bolder; color: #6c757d; font-size: 17px;">Admin page</a>
     </div>
@@ -233,7 +233,7 @@
     <div class="d-flex align-items-center">
         <div class="d-flex align-items-center">
             <div class="cart-icons d-flex align-items-center">
-                <a href="orders.html"><i class="bi bi-box-seam"></i><span style="color: green">Buyurtmalar</span></a>
+                <a href="orders.html"><i class="bi bi-box-seam"></i><span style="color: green">Orders</span></a>
             </div>
 
             <!-- User Profile Dropdown -->
@@ -259,15 +259,15 @@
 </header>
 
 <div class="container orders-container">
-    <h1 class="text-center" style="color: #28a745">BUYURTMALARIM</h1>
-    <p class="text-muted text-center">Buyurtma tafsilotlarini ko'rish uchun ustiga bosing.</p>
+    <h1 class="text-center" style="color: #28a745">MY ORDERS</h1>
+    <p class="text-muted text-center">Click to see order all info.</p>
 
     <!-- Search Container -->
     <div class="search-container">
         <div class="input-group">
-            <input type="text" id="searchInput" class="form-control" placeholder="Buyurtma raqami, manzil yoki telefon raqami bo'yicha qidirish...">
+            <input type="text" id="searchInput" class="form-control" placeholder="Search by order id, phone number, address, etc...">
             <button class="btn btn-outline-success" type="button" id="searchButton">
-                <i class="bi bi-search"></i> Qidirish
+                <i class="bi bi-search"></i> Search
             </button>
         </div>
     </div>
@@ -277,10 +277,10 @@
             <thead>
             <tr>
                 <th>#</th>
-                <th>Buyurtma sanasi</th>
-                <th>Manzil</th>
-                <th>Telefon</th>
-                <th>Holati</th>
+                <th>Order date</th>
+                <th>Address</th>
+                <th>Phone</th>
+                <th>State</th>
             </tr>
             </thead>
             <tbody id="ordersTableBody">
@@ -292,8 +292,8 @@
     <!-- No Orders Message -->
     <div id="noOrdersMessage" class="no-orders" style="display: none;">
         <i class="bi bi-inbox-fill fs-1 text-muted"></i>
-        <p class="mt-3">Hozircha buyurtmalar yo'q</p>
-        <a href="store.html" class="btn btn-success mt-2">Do'konga o'tish</a>
+        <p class="mt-3">Empty</p>
+        <a href="store.html" class="btn btn-success mt-2">Go Home</a>
     </div>
 
     <!-- Pagination -->
@@ -307,10 +307,9 @@
 <footer class="footer">
     <div class="containerjon">
         <div class="footer-section">
-            <h2>Bizning kompaniya</h2>
+            <h2>Our Company</h2>
             <div class="underline"></div>
-            <p>Ajoyib mahsulotlar va xizmatlar uchun yagona manzil. Biz bilan bog'laning va so'nggi takliflarimiz hamda
-                maxsus chegirmalarimizdan xabardor bo'ling.</p>
+            <p>The one-stop destination for amazing products and services. Connect with us and stay updated on our latest offers and exclusive discounts.</p>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -320,20 +319,21 @@
         </div>
 
         <div class="footer-section">
-            <h2>Tezkor havolalar</h2>
+            <h2>Quick Links</h2>
             <div class="underline"></div>
             <ul>
-                <li><a href="store.html">Asosiy</a></li>
-                <li><a href="#">Kategoriyalar</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="store.html">Home</a></li>
+                <li><a href="#">Categories</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="inquiry.html">Inquiry</a></li>
             </ul>
         </div>
 
         <div class="footer-section">
-            <h2>Aloqada bo'ling</h2>
+            <h2>Stay Connected</h2>
             <div class="underline"></div>
-            <input type="email" placeholder="Telefon raqam kiriting..." class="email-input">
-            <button class="subscribe-btn">Obuna bo'lish</button>
+            <input type="email" placeholder="Enter your phone number..." class="email-input">
+            <button class="subscribe-btn">Subscribe</button>
         </div>
     </div>
 </footer>
@@ -419,10 +419,10 @@
                     <td colspan="5">
                         <div class="p-3">
                             <div class="order-details mb-3">
-                                <h5 class="mb-3" style="color: #28a745">Buyurtma ma'lumotlari</h5>
+                                <h5 class="mb-3" style="color: #28a745">Order data</h5>
                                 <div class="order-details-grid">
                                     <div class="detail-item">
-                                        <span class="detail-label">Buyurtma ID:</span>
+                                        <span class="detail-label">Order ID:</span>
                                         <span class="detail-value">#${order.id}</span>
                                     </div>
                                     <div class="detail-item">
@@ -436,15 +436,15 @@
             }).format(new Date(order.orderDate))}</span>
                                     </div>
                                     <div class="detail-item">
-                                        <span class="detail-label">Manzil:</span>
+                                        <span class="detail-label">Address:</span>
                                         <span class="detail-value">${address}</span>
                                     </div>
                                     <div class="detail-item">
-                                        <span class="detail-label">Telefon:</span>
+                                        <span class="detail-label">Phone:</span>
                                         <span class="detail-value">${order.phoneNumber || "Telefon ko'rsatilmagan"}</span>
                                     </div>
                                     <div class="detail-item">
-                                        <span class="detail-label">Holati:</span>
+                                        <span class="detail-label">State:</span>
                                         <span class="detail-value">
                                             <span class="badge ${getStatusBadgeClass(order.status)}">${order.status}</span>
                                         </span>
@@ -452,12 +452,12 @@
                                 </div>
                                 ${order.notes ? `
                                 <div class="mt-3">
-                                    <span class="detail-label">Izohlar:</span>
+                                    <span class="detail-label">Notes:</span>
                                     <div class="notes-box">${order.notes}</div>
                                 </div>` : ''}
                             </div>
 
-                            <h5 style="color: #28a745">Buyurtma mahsulotlari</h5>
+                            <h5 style="color: #28a745">Order Items</h5>
                             <ul id="items-list-${order.id}" class="list-group"></ul>
                         </div>
                     </td>
