--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -516,9 +516,9 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-section">
-            <h2 class="footer-title">Bizning kompaniya</h2>
+            <h2 class="footer-title">Our Company</h2>
             <div class="underline"></div>
-            <p class="footer-text">Ajoyib mahsulotlar va xizmatlar uchun yagona manzil. Biz bilan bog'laning va so'nggi takliflarimiz hamda maxsus chegirmalarimizdan xabardor bo'ling.</p>
+            <p class="footer-text">Your one-stop destination for amazing products and services. Connect with us and stay updated on our latest offers and exclusive discounts.</p>
             <div class="social-icons">
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-twitter"></i></a>
@@ -528,20 +528,20 @@
         </div>
 
         <div class="footer-section">
-            <h2 class="footer-title">Tezkor havolalar</h2>
+            <h2 class="footer-title">Quick Links</h2>
             <div class="underline"></div>
             <ul class="footer-links">
-                <li><a href="store.html">Asosiy</a></li>
-                <li><a href="#">Kategoriyalar</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="store.html">Home</a></li>
+                <li><a href="#">Categories</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
 
         <div class="footer-section">
-            <h2 class="footer-title">Aloqada bo'ling</h2>
+            <h2 class="footer-title">Stay Connected</h2>
             <div class="underline"></div>
-            <input type="text" placeholder="Telefon raqam kiriting..." class="footer-input">
-            <button class="footer-button">Obuna bo'lish</button>
+            <input type="text" placeholder="Enter your phone number..." class="footer-input">
+            <button class="footer-button">Subscribe</button>
         </div>
     </div>
 </footer>
