--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -452,9 +452,9 @@
 <header class="navbar">
     <div class="navbar-brand">
         <img src="images/logo/img.png" alt="not found !" style="width: 110px; margin-left: 10px; margin-right: 95px;">        <div class="nav-links">
-        <a href="store.html" class="nav-link">ASOSIY</a>
-        <a href="contact.html" class="nav-link">KONTAKT</a>
-        <a href="about.html" class="nav-link active">BIZ HAQIMIZDA</a>
+        <a href="store.html" class="nav-link">HOME</a>
+        <a href="contact.html" class="nav-link">CONTACT</a>
+        <a href="about.html" class="nav-link active">ABOUT US</a>
         <a href="adminpage.html" class="nav-link admin-page" style="display: none;">Admin page</a>
     </div>
     </div>
@@ -475,8 +475,8 @@
 <div class="container">
     <div class="profile-card">
         <div class="profile-header">
-            <h2 class="profile-title">Shaxsiy kabinet sozlamalari</h2>
-            <p class="profile-description">Maʼlumotlaringizni koʻring va yangilang</p>
+            <h2 class="profile-title">Profile settings</h2>
+            <p class="profile-description">You can modify you data</p>
         </div>
 
         <div class="profile-content">
@@ -486,15 +486,15 @@
             </div>
 
             <div class="form-group">
-                <label for="phone" class="form-label">Telefon raqam</label>
+                <label for="phone" class="form-label">Phone number</label>
                 <input type="tel" id="phone" class="form-input" disabled>
             </div>
         </div>
 
         <div class="profile-footer">
-            <button id="editBtn" class="btn btn-primary">Tahrirlash</button>
-            <button id="cancelBtn" class="btn btn-secondary" style="display: none;">Bekor qilish</button>
-            <button id="saveBtn" class="btn btn-primary" style="display: none;">Saqlash</button>
+            <button id="editBtn" class="btn btn-primary">Edit</button>
+            <button id="cancelBtn" class="btn btn-secondary" style="display: none;">Cancel</button>
+            <button id="saveBtn" class="btn btn-primary" style="display: none;">Save</button>
         </div>
     </div>
 </div>
